# python-kickstart

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml
src/: __main__.py
