[project]
name = "python-dev"
version = "0.1.0"
description = "Reproducible, Declarative and Reliable python dev environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "black>=25.1",
    "pyflakes>=3.3.0",
    "isort>=6.0.0",
]

# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"
