[project]
name = "my-python-dev"
version = "0.1.0"
description = "Reproducible, Declarative and Reliable python dev environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

]

[dependency-groups]
dev = [
    "black>=25.1.0",
    #    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pyls-memestra>=0.0.16",
    "pylsp-mypy>=0.7.0",
    "pylsp-rope>=0.1.17",
    "pytest>=8.3.5",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.1",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.11.12",
]

# TODO: define the build backend hatchling or setuptools
#

# [build-system]
# requires = ["hatchling >= 1.26"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/"]
#
#
# setuptools is still the most common
# TODO: evaluate whether hatchling is good for everyday use
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# TODO add some scripts to auto run the application
