[project]
name = "my-python-dev"
version = "0.1.0"
description = "Reproducible, Declarative and Reliable python dev environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

]

[dependency-groups]
dev = [
    "pyls-memestra",
    "pylsp-mypy",
    "pylsp-rope",
    "pytest",
    "python-lsp-server",
    "ruff",
]

# TODO: define the build backend hatchling or setuptools
#

# [build-system]
# requires = ["hatchling >= 1.26"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/"]
#
#
# setuptools is still the most common
# TODO: evaluate whether hatchling is good for everyday use
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# TODO add some scripts to auto run the application
